tests/macro_tests/invalid_assoc.stderr
error: expected 'left' or 'right'
 --> $DIR/invalid_assoc.rs:5:15
  |
5 |     #[assoc = "up"]
  |               ^^^^
